...
    
    // Stepper items
    let stepperPosition: Observable<Double> = Observable()
    let stepperDescription: Observable<String>
    
    // Segment items
    static let segmentImageNames = ["sun.max", "cloud.sun", "cloud", "cloud.rain", "cloud.bolt.rain"]
    let selectedSegment: Observable<Int> = Observable()
    let segmentDescription: Observable<String>
    
    // Text View items
    let textViewContents: Observable<String>
    
...
